--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -13,8 +13,42 @@
     <li class="menu <%= current_page?(users_path) ? 'active' : '' %>">
       <a href="<%= users_path %>" aria-expanded="false" class="dropdown-toggle">
         <div class="">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
-            <path d="M144 0a80 80 0 1 1 0 160A80 80 0 1 1 144 0zM512 0a80 80 0 1 1 0 160A80 80 0 1 1 512 0zM0 298.7C0 239.8 47.8 192 106.7 192l42.7 0c15.9 0 31 3.5 44.6 9.7c-1.3 7.2-1.9 14.7-1.9 22.3c0 38.2 16.8 72.5 43.3 96c-.2 0-.4 0-.7 0L21.3 320C9.6 320 0 310.4 0 298.7zM405.3 320c-.2 0-.4 0-.7 0c26.6-23.5 43.3-57.8 43.3-96c0-7.6-.7-15-1.9-22.3c13.6-6.3 28.7-9.7 44.6-9.7l42.7 0C592.2 192 640 239.8 640 298.7c0 11.8-9.6 21.3-21.3 21.3l-213.3 0zM224 224a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zM128 485.3C128 411.7 187.7 352 261.3 352l117.3 0C452.3 352 512 411.7 512 485.3c0 14.7-11.9 26.7-26.7 26.7l-330.7 0c-14.7 0-26.7-11.9-26.7-26.7z"/>
+          <svg fill="#000000" height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+               viewBox="0 0 474.565 474.565" xml:space="preserve">
+            <g>
+              <path d="M255.204,102.3c-0.606-11.321-12.176-9.395-23.465-9.395C240.078,95.126,247.967,98.216,255.204,102.3z"/>
+              <path d="M134.524,73.928c-43.825,0-63.997,55.471-28.963,83.37c11.943-31.89,35.718-54.788,66.886-63.826
+		C163.921,81.685,150.146,73.928,134.524,73.928z"/>
+              <path d="M43.987,148.617c1.786,5.731,4.1,11.229,6.849,16.438L36.44,179.459c-3.866,3.866-3.866,10.141,0,14.015l25.375,25.383
+		c1.848,1.848,4.38,2.888,7.019,2.888c2.61,0,5.125-1.04,7.005-2.888l14.38-14.404c2.158,1.142,4.55,1.842,6.785,2.827
+		c0-0.164-0.016-0.334-0.016-0.498c0-11.771,1.352-22.875,3.759-33.302c-17.362-11.174-28.947-30.57-28.947-52.715
+		c0-34.592,28.139-62.739,62.723-62.739c23.418,0,43.637,13.037,54.43,32.084c11.523-1.429,22.347-1.429,35.376,1.033
+		c-1.676-5.07-3.648-10.032-6.118-14.683l14.396-14.411c1.878-1.856,2.918-4.38,2.918-7.004c0-2.625-1.04-5.148-2.918-7.004
+		l-25.361-25.367c-1.94-1.941-4.472-2.904-7.003-2.904c-2.532,0-5.063,0.963-6.989,2.904l-14.442,14.411
+		c-5.217-2.764-10.699-5.078-16.444-6.825V9.9c0-5.466-4.411-9.9-9.893-9.9h-35.888c-5.451,0-9.909,4.434-9.909,9.9v20.359
+		c-5.73,1.747-11.213,4.061-16.446,6.825L75.839,22.689c-1.942-1.941-4.473-2.904-7.005-2.904c-2.531,0-5.077,0.963-7.003,2.896
+		L36.44,48.048c-1.848,1.864-2.888,4.379-2.888,7.012c0,2.632,1.04,5.148,2.888,7.004l14.396,14.403
+		c-2.75,5.218-5.063,10.708-6.817,16.438H23.675c-5.482,0-9.909,4.441-9.909,9.915v35.889c0,5.458,4.427,9.908,9.909,9.908H43.987z"
+                />
+              <path d="M354.871,340.654c15.872-8.705,26.773-25.367,26.773-44.703c0-28.217-22.967-51.168-51.184-51.168
+		c-9.923,0-19.118,2.966-26.975,7.873c-4.705,18.728-12.113,36.642-21.803,52.202C309.152,310.022,334.357,322.531,354.871,340.654z
+		"/>
+              <path d="M460.782,276.588c0-5.909-4.799-10.693-10.685-10.693H428.14c-1.896-6.189-4.411-12.121-7.393-17.75l15.544-15.544
+		c2.02-2.004,3.137-4.721,3.137-7.555c0-2.835-1.118-5.553-3.137-7.563l-27.363-27.371c-2.08-2.09-4.829-3.138-7.561-3.138
+		c-2.734,0-5.467,1.048-7.547,3.138l-15.576,15.552c-5.623-2.982-11.539-5.481-17.751-7.369v-21.958
+		c0-5.901-4.768-10.685-10.669-10.685H311.11c-2.594,0-4.877,1.04-6.739,2.578c3.26,11.895,5.046,24.793,5.046,38.552
+		c0,8.735-0.682,17.604-1.956,26.423c7.205-2.656,14.876-4.324,22.999-4.324c36.99,0,67.086,30.089,67.086,67.07
+		c0,23.637-12.345,44.353-30.872,56.303c13.48,14.784,24.195,32.324,31.168,51.976c1.148,0.396,2.344,0.684,3.54,0.684
+		c2.733,0,5.467-1.04,7.563-3.13l27.379-27.371c2.004-2.004,3.106-4.721,3.106-7.555s-1.102-5.551-3.106-7.563l-15.576-15.552
+		c2.982-5.621,5.497-11.555,7.393-17.75h21.957c2.826,0,5.575-1.118,7.563-3.138c2.004-1.996,3.138-4.72,3.138-7.555
+		L460.782,276.588z"/>
+              <path d="M376.038,413.906c-16.602-48.848-60.471-82.445-111.113-87.018c-16.958,17.958-37.954,29.351-61.731,29.351
+		c-23.759,0-44.771-11.392-61.713-29.351c-50.672,4.573-94.543,38.17-111.145,87.026l-9.177,27.013
+		c-2.625,7.773-1.368,16.338,3.416,23.007c4.783,6.671,12.486,10.631,20.685,10.631h315.853c8.215,0,15.918-3.96,20.702-10.631
+		c4.767-6.669,6.041-15.234,3.4-23.007L376.038,413.906z"/>
+              <path d="M120.842,206.782c0,60.589,36.883,125.603,82.352,125.603c45.487,0,82.368-65.014,82.368-125.603
+		C285.563,81.188,120.842,80.939,120.842,206.782z"/>
+            </g>
           </svg>
           <span>Admins</span>
         </div>
@@ -25,8 +59,8 @@
     <li class="menu">
       <a href="#players" data-bs-toggle="collapse" aria-expanded="<%= request.path.include?('/players') ? 'true' : 'false' %>" class="dropdown-toggle">
         <div class="">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
-            <path d="M160 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zM126.5 199.3c-1 .4-1.9 .8-2.9 1.2l-8 3.5c-16.4 7.3-29 21.2-34.7 38.2l-2.6 7.8c-5.6 16.8-23.7 25.8-40.5 20.2s-25.8-23.7-20.2-40.5l2.6-7.8c11.4-34.1 36.6-61.9 69.4-76.5l8-3.5c20.8-9.2 43.3-14 66.1-14c44.6 0 84.8 26.8 101.9 67.9L281 232.7l21.4 10.7c15.8 7.9 22.2 27.1 14.3 42.9s-27.1 22.2-42.9 14.3L247 287.3c-10.3-5.2-18.4-13.8-22.8-24.5l-9.6-23-19.3 65.5 49.5 54c5.4 5.9 9.2 13 11.2 20.8l23 92.1c4.3 17.1-6.1 34.5-23.3 38.8s-34.5-6.1-38.8-23.3l-22-88.1-70.7-77.1c-14.8-16.1-20.3-38.6-14.7-59.7l16.9-63.5zM68.7 398l25-62.4c2.1 3 4.5 5.8 7 8.6l40.7 44.4-14.5 36.2c-2.4 6-6 11.5-10.6 16.1L54.6 502.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L68.7 398z"/>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+            <path d="M144 0a80 80 0 1 1 0 160A80 80 0 1 1 144 0zM512 0a80 80 0 1 1 0 160A80 80 0 1 1 512 0zM0 298.7C0 239.8 47.8 192 106.7 192l42.7 0c15.9 0 31 3.5 44.6 9.7c-1.3 7.2-1.9 14.7-1.9 22.3c0 38.2 16.8 72.5 43.3 96c-.2 0-.4 0-.7 0L21.3 320C9.6 320 0 310.4 0 298.7zM405.3 320c-.2 0-.4 0-.7 0c26.6-23.5 43.3-57.8 43.3-96c0-7.6-.7-15-1.9-22.3c13.6-6.3 28.7-9.7 44.6-9.7l42.7 0C592.2 192 640 239.8 640 298.7c0 11.8-9.6 21.3-21.3 21.3l-213.3 0zM224 224a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zM128 485.3C128 411.7 187.7 352 261.3 352l117.3 0C452.3 352 512 411.7 512 485.3c0 14.7-11.9 26.7-26.7 26.7l-330.7 0c-14.7 0-26.7-11.9-26.7-26.7z"/>
           </svg>
           <span>Uses</span>
         </div>
@@ -55,8 +89,8 @@
     <li class="menu">
       <a href="#movies" data-bs-toggle="collapse" aria-expanded="<%= request.path.include?('/movies') ? 'true' : 'false' %>" class="dropdown-toggle">
         <div class="">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
-            <path d="M160 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zM126.5 199.3c-1 .4-1.9 .8-2.9 1.2l-8 3.5c-16.4 7.3-29 21.2-34.7 38.2l-2.6 7.8c-5.6 16.8-23.7 25.8-40.5 20.2s-25.8-23.7-20.2-40.5l2.6-7.8c11.4-34.1 36.6-61.9 69.4-76.5l8-3.5c20.8-9.2 43.3-14 66.1-14c44.6 0 84.8 26.8 101.9 67.9L281 232.7l21.4 10.7c15.8 7.9 22.2 27.1 14.3 42.9s-27.1 22.2-42.9 14.3L247 287.3c-10.3-5.2-18.4-13.8-22.8-24.5l-9.6-23-19.3 65.5 49.5 54c5.4 5.9 9.2 13 11.2 20.8l23 92.1c4.3 17.1-6.1 34.5-23.3 38.8s-34.5-6.1-38.8-23.3l-22-88.1-70.7-77.1c-14.8-16.1-20.3-38.6-14.7-59.7l16.9-63.5zM68.7 398l25-62.4c2.1 3 4.5 5.8 7 8.6l40.7 44.4-14.5 36.2c-2.4 6-6 11.5-10.6 16.1L54.6 502.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L68.7 398z"/>
+          <svg fill="#000000" width="800px" height="800px" viewBox="0 0 96 96" xmlns="http://www.w3.org/2000/svg">
+            <path d="M38 9.54C18.147 15.081 5.205 34.868 8.798 54.187c5.939 31.938 43.74 44.578 66.67 22.293L80 72.075V88h8.156l-.359-24.25c-.397-26.808-.864-29.173-7.724-39.144C71.435 12.051 52.849 5.395 38 9.54m-1.965 8.662c-21.065 8.087-26.757 36.207-10.6 52.363C45.55 90.68 80 76.434 80 48c0-22.531-22.743-37.945-43.965-29.798m8.286 2.987c-5.523 2.67-5.039 11.443.765 13.847 8.905 3.688 15.066-9.912 6.299-13.906-2.957-1.348-4.175-1.338-7.064.059m-20 20c-5.523 2.67-5.039 11.443.765 13.847 8.905 3.688 15.066-9.912 6.299-13.906-2.957-1.348-4.175-1.338-7.064.059m40 0c-5.523 2.67-5.039 11.443.765 13.847 8.905 3.688 15.066-9.912 6.299-13.906-2.957-1.348-4.175-1.338-7.064.059m-18.75 4.382C44.707 46.436 44 47.529 44 48c0 1.111 2.889 4 4 4 1.111 0 4-2.889 4-4 0-1.111-2.889-4-4-4-.471 0-1.564.707-2.429 1.571m-1.25 15.618c-5.523 2.67-5.039 11.443.765 13.847 8.905 3.688 15.066-9.912 6.299-13.906-2.957-1.348-4.175-1.338-7.064.059" fill-rule="evenodd"/>
           </svg>
           <span>Movies</span>
         </div>
@@ -75,6 +109,57 @@
 
         <li class="<%= current_page?(movies_path) ? 'active' : '' %>">
           <a href="<%= movies_path %>"> List </a>
+        </li>
+      </ul>
+
+    </li>
+  <% end %>
+
+  <% if policy(Current.user).show_side_screen? %>
+    <li class="menu">
+      <a href="#screens" data-bs-toggle="collapse" aria-expanded="<%= request.path.include?('/screens') ? 'true' : 'false' %>" class="dropdown-toggle">
+        <div class="">
+          <svg fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+               width="800px" height="800px" viewBox="0 0 255.661 255.661"
+               xml:space="preserve">
+            <g>
+              <g id="Layer_72_30_">
+                <g>
+                  <polygon points="255.661,190.247 255.661,102.519 118.729,102.519 118.729,132.52 128.742,132.52 128.742,112.536
+                  245.643,112.536 245.643,177.329 183.346,177.329 183.346,199.468 195.33,200.555 227.209,200.555 227.209,195.893
+                  198.625,195.893 198.625,190.247 			"/>
+                  <polygon points="75.601,134.546 30.201,179.949 45.26,180.009 75.631,150.338 			"/>
+                  <polygon points="80.473,129.676 77.625,132.52 110.215,132.52 110.215,119.851 21.772,119.851 21.604,29.94 165.42,29.955
+                  165.527,94.735 177.16,94.735 177.16,29.635 187.428,29.635 187.428,14.294 177.16,14.294 9.62,14.294 0,14.294 0,29.635
+                  9.62,29.635 9.62,129.676 			"/>
+                  <polygon points="131.009,204.17 128.29,204.17 116.763,204.17 116.763,208.517 143.169,208.517 143.169,210.406 116.763,210.406
+                  116.763,214.327 191.186,214.327 191.186,204.861 177.435,204.17 			"/>
+                  <path d="M61.38,241.367h49.361v-74.053H61.38V241.367z M87.098,237.655c-1.31,0-2.376-1.072-2.376-2.387
+                  c0-1.315,1.066-2.377,2.376-2.377c1.32,0,2.381,1.062,2.381,2.377C89.479,236.583,88.418,237.655,87.098,237.655z
+                   M68.512,174.449h35.089v54.645H68.512V174.449z"/>
+                  <polygon points="116.763,194.085 116.763,201.241 177.45,201.241 177.45,138.223 81.872,138.223 81.872,162.043 89.032,162.043
+                  89.032,145.377 170.285,145.377 170.285,194.085 			"/>
+                </g>
+              </g>
+            </g>
+          </svg>
+          <span>Screens</span>
+        </div>
+        <div>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right">
+            <polyline points="9 18 15 12 9 6"></polyline>
+          </svg>
+        </div>
+      </a>
+      <ul class="collapse submenu list-unstyled <%= request.path.include?('/screens') ? 'collapse show' : '' %>" id="screens" data-bs-parent="#accordionExample">
+        <% if policy(Screen).new? %>
+          <li class="<%= current_page?(new_screen_path) ? 'active' : '' %>">
+            <a href="<%= new_screen_path %>"> Create </a>
+          </li>
+        <% end %>
+
+        <li class="<%= current_page?(screens_path) ? 'active' : '' %>">
+          <a href="<%= screens_path %>"> List </a>
         </li>
       </ul>
 
