--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -166,6 +166,38 @@
     </li>
   <% end %>
 
+  <% if policy(Current.user).show_side_screen? %>
+    <li class="menu">
+      <a href="#showtimes" data-bs-toggle="collapse" aria-expanded="<%= request.path.include?('/showtimes') ? 'true' : 'false' %>" class="dropdown-toggle">
+        <div class="">
+          <svg xmlns="http://www.w3.org/2000/svg" id="slidesgo" viewBox="0 0 24 24" width="512" height="512">
+            <g id="Group">
+              <path id="Path" d="M22.53,2.5L7.84,.08h-.16c-.48,0-.87,.36-.87,.87v1.15l13.38,2.19c.95,.16,1.67,.99,1.67,1.99v11.49l1.11,.2h.16c.48,0,.87-.36,.87-.87V4.21c-.04-.87-.64-1.59-1.47-1.71Z"/>
+              <path id="Path-2" data-name="Path" d="M19.18,5.53L4.45,3.1h-.16c-.48,0-.87,.36-.87,.87v1.19l13.26,2.19c.95,.16,1.67,.99,1.67,1.99v11.52l1.11,.2h.16c.48,0,.87-.36,.87-.87V7.08c0-.76-.56-1.43-1.31-1.55Z"/>
+              <path id="Shape" d="M15.72,8.43L1.03,6h-.16c-.48,0-.87,.36-.87,.87v13.35c0,.6,.44,1.11,1.03,1.19l15.05,2.5h.16c.48,0,.87-.36,.87-.87V10.06c-.04-.8-.6-1.47-1.39-1.63ZM6.64,17.61c0,.28-.36,.4-.56,.2l-3.59-3.3c-.2-.16-.2-.48,0-.56l3.59-2.07c.24-.12,.56,.08,.56,.4v5.33Zm7.52-1.19l-3.58,2.15c-.24,.16-.56-.08-.56-.4v-5.37c0-.28,.32-.4,.56-.2l3.59,3.22c.19,.2,.19,.48,0,.6Z"/>
+            </g>
+          </svg>
+          <span>Showtimes</span>
+        </div>
+        <div>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right">
+            <polyline points="9 18 15 12 9 6"></polyline>
+          </svg>
+        </div>
+      </a>
+      <ul class="collapse submenu list-unstyled <%= request.path.include?('/showtimes') ? 'collapse show' : '' %>" id="showtimes" data-bs-parent="#accordionExample">
+        <% if policy(Showtime).new? %>
+          <li class="<%= current_page?(new_showtime_path) ? 'active' : '' %>">
+            <a href="<%= new_showtime_path %>"> Create </a>
+          </li>
+        <% end %>
+        <li class="<%= current_page?(showtimes_path) ? 'active' : '' %>">
+          <a href="<%= showtimes_path %>"> List </a>
+        </li>
+      </ul>
+    </li>
+  <% end %>
+
   <%# if policy(Current.user).show_side_club? %>
 <!--    <li class="menu">-->
 <!--      <a href="#team" data-bs-toggle="collapse" aria-expanded="false" class="dropdown-toggle">-->
