--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
-
+  <%= debugbar_head if defined?(Debugbar) %>
   <%= yield :head %>
 
   <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
@@ -24,5 +24,7 @@
 
 <body>
 <%= yield %>
+
+<%= debugbar_body if defined?(Debugbar) %>
 </body>
 </html>
