--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_with(model: booking, local: true) do |f| %>
+  <%= f.hidden_field :lock_version %>
   <% if booking.errors.any? %>
     <div class="alert alert-danger">
       <h4><%= pluralize(booking.errors.count, "lỗi") %> đã xảy ra:</h4>
