--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -76,7 +76,18 @@
                     <!--  END BREADCRUMBS  -->
                     
                     <div class="row layout-top-spacing">
-                        <%= yield %>
+                      <% if flash[:notice] %>
+                        <div class="alert alert-success alert-dismissible fade show mt-3" role="alert">
+                          <%= flash[:notice] %>
+                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                      <% elsif flash[:alert] %>
+                        <div class="alert alert-danger alert-dismissible fade show mt-3" role="alert">
+                          <%= flash[:alert] %>
+                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                      <% end %>
+                      <%= yield %>
                     </div>
 
                 </div>
